# master

./: .editorconfig  .gitignore  Makefile  README.md  README.rst  essay.bib  essay.md  ifimaster.cls  pyproject.toml
client_logger/: __main__.py
docs/essay/: essay.bib  ifimaster.cls
docs/thesis/: Makefile  abstract.rst  conclusion.rst  conf.py  discussion.rst  duoforside.tex  implementation.rst  index.rst  introduction.rst  meta.yaml  method.rst  outline.md  preface.rst  related_work.rst  results.rst  scanning.rst  scope.rst
essay/: Makefile
graphing/: __main__.py  detection_histogram.py  detection_probability.py  latency.py  scan_accuracy.py  scan_time.py  troughput.py  utils.py
measurements/full/: scanner_0_measurements.json  scanner_1_measurements.json  scanner_2_measurements.json  timing_measurements.json
measurements/selective_1_6_11/: scanner_0_measurements.json  scanner_1_measurements.json  scanner_2_measurements.json  timing_measurements.json
measurements/selective_odd/: scanner_0_measurements.json  scanner_1_measurements.json  scanner_2_measurements.json  timing_measurements.json
measurements/smooth_1200/: scanner_0_measurements.json  scanner_1_measurements.json  scanner_2_measurements.json  timing_measurements.json
measurements/smooth_300/: scanner_0_measurements.json  (+3 more)
resfi/: resfi_loader.py
source/: Dockerfile  docker-compose.yaml  setup.cfg
source/src/: topology.py
thesis/: conf.py  index.rst
troughput_tester/: __init__.py  client.py  server.py
wifi_scanner/: __main__.py  algorithms.py  scan.py  schedulers.py  utilities.py
(+31 files in other folders)
