[tool.poetry]
name = "thesis"
version = "0.1.0"
description = "My master thesis!"
authors = ["Nicolas Harlem Eide <nicolaei@ifi.uio.no>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
