[metadata]
name = N/A
author = Nicolas Harlem Eide
author-email = nicolas@harlemeide.net
description = Looking at discovery of the local wireless network
long-description = file: README.rst, CHANGELOG.rst
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
test_suite = tests
setup_requires =
    sphinx
    sphinxcontrib-bibtex


[check]
metadata = true
restructuredtext = true
strict = true
